@startuml
!theme plain
title Sistema de Gestión de Asistencias y Retiros - Diagrama de Clases

package "Autenticación y Usuarios" {
  class Usuario {
    -idUsuario: int
    -nombre: string
    -apellido: string
    -dni: string
    -email: string
    -telefono: string
    -passwordHash: string
    -estado: string
    -idIe: int
    -createdAt: DateTime
    -updatedAt: DateTime
    +autenticar(): boolean
    +cambiarPassword(): void
    +actualizarPerfil(): void
  }

  class Rol {
    -idRol: int
    -nombre: string
    +asignarPermisos(): void
  }

  class UsuarioRol {
    -idUsuario: int
    -idRol: int
  }

  class Estudiante {
    -idEstudiante: int
    -idUsuario: int
    -idIe: int
    -idGradoSeccion: int
    -qr: string
    -codigo: string
    -fechaNacimiento: Date
    +generarQR(): string
    +obtenerHorarios(): HorarioClase[]
  }

  class Apoderado {
    -idApoderado: int
    -idUsuario: int
    -codigo: string
    -ocupacion: string
    -direccion: string
    +solicitarRetiro(): void
    +justificarInasistencia(): void
    +configurarNotificaciones(): void
  }

  class Docente {
    -idDocente: int
    -idUsuario: int
    -codigo: string
    -especialidad: string
    +registrarAsistencia(): void
    +revisarJustificaciones(): void
  }
}

package "Institución Educativa" {
  class Ie {
    -idIe: int
    -nombre: string
    -codigoIe: string
    -direccion: string
    -telefono: string
    -email: string
    -idModalidad: int
    +configurarParametros(): void
  }

  class Modalidad {
    -idModalidad: int
    -nombre: string
  }

  class Nivel {
    -idNivel: int
    -idIe: int
    -nombre: string
  }

  class Grado {
    -idGrado: int
    -idNivel: int
    -nombre: string
  }

  class Seccion {
    -idSeccion: int
    -nombre: string
  }

  class GradoSeccion {
    -idGradoSeccion: int
    -idGrado: int
    -idSeccion: int
  }
}

package "Asistencias" {
  class Asistencia {
    -idAsistencia: int
    -idEstudiante: int
    -idIe: int
    -fecha: Date
    -sesion: string
    -idInscripcionTaller: int
    -horaEntrada: Time
    -horaSalida: Time
    -idEstadoAsistencia: int
    -fuente: string
    -observaciones: string
    -registradoPor: int
    +registrarEntrada(): void
    +registrarSalida(): void
    +cambiarEstado(): void
  }

  class EstadoAsistencia {
    -idEstadoAsistencia: int
    -nombreEstado: string
    -codigo: string
    -requiereJustificacion: boolean
    -afectaAsistencia: boolean
    -activo: boolean
  }

  class HistoricoEstadoAsistencia {
    -idHistorico: int
    -idAsistencia: int
    -idEstadoAsistencia: int
    -fechaCambio: DateTime
    -cambiadoPor: int
  }
}

package "Justificaciones" {
  class Justificacion {
    -idJustificacion: int
    -idEstudiante: int
    -idIe: int
    -idTipoJustificacion: int
    -idEstadoJustificacion: int
    -fechaInicio: Date
    -fechaFin: Date
    -motivo: string
    -observaciones: string
    -fechaPresentacion: DateTime
    -presentadoPor: int
    -revisadoPor: int
    +presentar(): void
    +revisar(): void
    +aprobar(): void
    +rechazar(): void
  }

  class TipoJustificacion {
    -idTipoJustificacion: int
    -nombre: string
    -codigo: string
    -requiereDocumento: boolean
    -diasMaximos: int
    -activo: boolean
  }

  class EstadoJustificacion {
    -idEstadoJustificacion: int
    -nombre: string
    -codigo: string
    -esFinal: boolean
    -activo: boolean
  }

  class DocumentoJustificacion {
    -idDocumento: int
    -idJustificacion: int
    -nombreArchivo: string
    -rutaArchivo: string
    -tipoArchivo: string
    -tamanioBytes: int
    -descripcion: string
    +subirArchivo(): void
    +validarFormato(): boolean
  }
}

package "Retiros" {
  class Retiro {
    -idRetiro: int
    -idEstudiante: int
    -idIe: int
    -idGradoSeccion: int
    -fecha: Date
    -hora: Time
    -idTipoRetiro: int
    -origen: string
    -reportadoPorDocente: int
    -apoderadoContactado: int
    -horaContacto: DateTime
    -medioContacto: string
    -apoderadoQueRetira: int
    -dniVerificado: string
    -verificadoPor: int
    -idEstadoRetiro: int
    -observaciones: string
    +solicitar(): void
    +aprobar(): void
    +rechazar(): void
    +verificar(): void
  }

  class TipoRetiro {
    -idTipoRetiro: int
    -nombre: string
  }

  class EstadoRetiro {
    -idEstadoRetiro: int
    -codigo: string
    -nombre: string
    -orden: int
    -esFinal: boolean
  }

  class AutorizacionRetiro {
    -idAut: int
    -idEstudiante: int
    -idApoderado: int
    -vigenteDesde: Date
    -vigenteHasta: Date
    -observacion: string
    +validarVigencia(): boolean
  }
}

package "Horarios y Talleres" {
  class HorarioClase {
    -idHorarioClase: int
    -idGradoSeccion: int
    -idDocente: int
    -materia: string
    -diaSemana: int
    -horaInicio: Time
    -horaFin: Time
    -aula: string
    -toleranciaMin: int
    -sesiones: int
    -tipoActividad: TipoActividadEnum
    -activo: boolean
    +validarHorario(): boolean
  }

  class Taller {
    -idTaller: int
    -idIe: int
    -codigo: string
    -nombre: string
    -descripcion: string
    -instructor: string
    -capacidadMaxima: int
    -activo: boolean
    +inscribirEstudiante(): void
  }

  class HorarioTaller {
    -idHorarioTaller: int
    -idTaller: int
    -diaSemana: int
    -horaInicio: Time
    -horaFin: Time
    -toleranciaMin: int
    -lugar: string
    -activo: boolean
  }

  class InscripcionTaller {
    -idInscripcion: int
    -idEstudiante: int
    -idTaller: int
    -anio: int
    -fechaInscripcion: Date
    -estado: string
  }
}

package "Notificaciones" {
  class NotificacionConfig {
    -idConfig: int
    -idApoderado: int
    -idEstudiante: int
    -entradaIE: boolean
    -salidaIE: boolean
    -asistenciaAulas: boolean
    -asistenciaTalleres: boolean
    -tipoNotificacion: string
    +configurar(): void
  }

  class ServicioNotificacion {
    +enviarEmail(): void
    +enviarSMS(): void
    +procesarEvento(): void
  }
}

package "Códigos QR" {
  class CodigoQR {
    -idCodigo: int
    -idEstudiante: int
    -codigoQR: string
    -fechaGeneracion: DateTime
    -fechaExpiracion: DateTime
    -activo: boolean
    +generar(): string
    +validar(): boolean
    +renovar(): void
  }

  class EscanerQR {
    +escanearCodigo(): string
    +validarFormato(): boolean
    +identificarEstudiante(): Estudiante
  }
}

' Relaciones Usuario
Usuario ||--o{ UsuarioRol
Rol ||--o{ UsuarioRol
Usuario ||--|| Estudiante
Usuario ||--|| Apoderado
Usuario ||--|| Docente
Usuario }o--|| Ie

' Relaciones IE
Ie ||--o{ Nivel
Ie ||--|| Modalidad
Nivel ||--o{ Grado
Grado ||--o{ GradoSeccion
Seccion ||--o{ GradoSeccion

' Relaciones Estudiante
Estudiante }o--|| GradoSeccion
Estudiante ||--o{ Asistencia
Estudiante ||--o{ Justificacion
Estudiante ||--o{ Retiro
Estudiante ||--o{ InscripcionTaller

' Relaciones Apoderado-Estudiante
Apoderado ||--o{ EstudianteApoderado
Estudiante ||--o{ EstudianteApoderado

' Relaciones Asistencias
Asistencia }o--|| EstadoAsistencia
Asistencia ||--o{ HistoricoEstadoAsistencia
Asistencia }o--o| InscripcionTaller

' Relaciones Justificaciones
Justificacion }o--|| TipoJustificacion
Justificacion }o--|| EstadoJustificacion
Justificacion ||--o{ DocumentoJustificacion

' Relaciones Retiros
Retiro }o--|| TipoRetiro
Retiro }o--|| EstadoRetiro
Retiro }o--o| Apoderado

' Relaciones Horarios
GradoSeccion ||--o{ HorarioClase
Docente ||--o{ HorarioClase
Taller ||--o{ HorarioTaller
Taller ||--o{ InscripcionTaller

' Relaciones Notificaciones
Apoderado ||--o{ NotificacionConfig
NotificacionConfig --> ServicioNotificacion

' Relaciones QR
Estudiante ||--|| CodigoQR
EscanerQR --> Asistencia : "genera"
CodigoQR --> EscanerQR : "valida"

@enduml
